# token-escrow-example

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
src/: lib.rs  processor.rs  state.rs
src/instructions/: exchange.rs  initialize.rs  mod.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-200-FDKZk4P4EimazfC8SkqhGDoN9itPBmBpAMHxGTyicAeL.tar.zst  snapshot-300-9QnpRohZJmWu4zbbb8NPvGFfxR8VDJUdFksQ1CXkQpJs.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/run/: 100.0  22.1  300.4
test-ledger/accounts/snapshot/300/: 0.2  200.3
test-ledger/rocksdb/: 000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000061.sst  IDENTITY  LOG  LOG.old.1716627503363712  MANIFEST-000063
test-ledger/snapshot/300/: 300  status_cache
test-ledger/snapshot/300/accounts_hardlinks/: account_path_0
tests/: test.ts
